added updated manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,53 @@
   "name": "ACTS AUTO",
   "short_name": "ACTS",
   "description": "A ACTS initiative",
-  "start_url": "/",
+  "start_url": "/actsautoproject.onrender.com",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2196f3",
+  "screenshots": [
+    {
+    "src" : "/img/ss1.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss2.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss3.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss4.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss5.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss6.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss7.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  },
+    {
+    "src" : "/img/ss8.png",
+    "size" : "1280x720"
+    "type" : "image/png"
+  }
+    
+  ]
   "icons": [
     {
       "src": "/static/img/icons/acts.png",
@@ -35,6 +78,11 @@
     {
       "src": "/static/img/icons/acts.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/img/icons/acts.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
