--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Replit user <<>>"]
 python = "^3.10"
 Flask = "^2.2.3"
 pymysql = "^1.0.3"
+verify-email = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 
